fix spacing on volunteer page and add link to join discord page

--- a/src/app/components/navbar.module.css
+++ b/src/app/components/navbar.module.css
@@ -30,7 +30,7 @@
 }
 
 .navbarright a:hover {
-  color: #DE6331;
+  color: #622b16;
 }
 
 .logo {
